// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserIcon tests default renderer 1`] = `
<IconButton
  label="label"
>
  <React.Fragment>
    <Memo />
  </React.Fragment>
</IconButton>
`;

exports[`UserIcon tests with user 1`] = `
<IconButton
  label="Some Name"
>
  <React.Fragment>
    <WithStyles(ForwardRef(Avatar))
      className="UserIcon__Avatar some-green-class"
    >
      SN
    </WithStyles(ForwardRef(Avatar))>
  </React.Fragment>
</IconButton>
`;

exports[`UserIcon tests with user with facebook photos 1`] = `
<IconButton
  label="Some Name"
>
  <React.Fragment>
    <WithStyles(ForwardRef(Avatar))
      className="UserIcon__Avatar some-green-class"
    >
      <img
        alt="Some Name"
        src="some-picture-link.png"
      />
    </WithStyles(ForwardRef(Avatar))>
  </React.Fragment>
</IconButton>
`;
